# rpm

./: .bash_history  .esd_auth  .rpmmacros  .viminfo  .wget-hsts  .xauthnKIJa1  CMakeCache.txt  CMakeLists.txt  Makefile  argv-array.h  cmake_install.cmake  file.c  main.c
.cache/: event-sound-cache.tdb.56ac46da276546178ced81477324ba38.x86_64-redhat-linux-gnu
.cache/babl/: babl-fishes
.cache/fontconfig/: 477ff6b974c3c1b81af411ebecb34280-le64.cache-7
.cache/gnome-software/flatpak-system-default/: components.xmlb
.cache/gnome-software/flatpak-user-user/: components.xmlb
.cache/gnome-software/odrs/: org.gnome.gedit.desktop.json  ratings.json
.cache/gnome-software/shell-extensions/: extensions-web.xmlb  gnome.json
.cache/tracker/: last-crawl.txt  meta.db  meta.db-shm  meta.db-wal
.config/dconf/: user
.config/gtk-3.0/: bookmarks
.config/ibus/bus/: 56ac46da276546178ced81477324ba38-unix-0
.config/pulse/: cookie
.local/share/: gsettings-data-convert  recently-used.xbel
.local/share/gnome-shell/: application_state  notifications
.local/share/gvfs-metadata/: home  root
.local/share/keyrings/: login.keyring  user.keystore
.mozilla/firefox/: installs.ini  profiles.ini
.mozilla/firefox/3mhw3gfg.default/: times.json
.mozilla/firefox/cxrtgisi.default-release/: SiteSecurityServiceState.txt  cert9.db  (+20 more)
.vim/: .netrwhist
customrpm/popup-1.0.0/: README
popup-1.0/: Makefile  main.c
rpmbuild/SPECS/: hello.spec  icecast.spec  meson.spec  pop.spec  popup.spec
rpmbuild/SRPMS/: hello-2.10-1.fc31.src.rpm  hello-world-1-1.src.rpm  popup-1.0.0-1.src.rpm
(+2581 files in other folders)
